--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="d-grid">
-                    <button type="button" class="btn btn-primary">Download</button>
+                    <button id="downloadButton" type="button" class="btn btn-primary">Download</button>
                 </div>
             </div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/save-svg-as-png@1.4.17/lib/saveSvgAsPng.min.js"></script>
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script src="bingo.js"></script>
 </body>
