--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Biden Bingo!</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="bingo.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div class="container">
         <div class="row text-center mb-3 mt-3">
-            <h1>Get Your Biden Bingo Card!</h1>
+            <h1>Get Your Biden Bingo Card</h1>
         </div>
         <div class="row gx-0 justify-content-center mb-3">
             <div class="col-md-8 col-lg-6" id="chartArea">
